# json-parser

./: .gitignore  Build.lua  CMakeLists.txt  Jenkinsfile  build_and_test.lua
.github/workflows/: buf.yml  cmake.yml
build-vscode/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-vscode/.cmake/api/v1/reply/: cache-v2-402dd779cc8cf4637baa.json  cache-v2-e90f07036991b580c9d1.json  cmakeFiles-v1-513ee8cd225c0287e151.json  cmakeFiles-v1-9837ae9dec0dbc82467b.json  codemodel-v2-6764502e4288bb486f86.json  codemodel-v2-9489b721f65ae99b1ba6.json  directory-_deps.googletest-build-Debug-fb6cc81dfae97c21d714.json  directory-_deps.googletest-build.googlemock-Debug-7b2b282208ac9d632da9.json  directory-_deps.googletest-build.googletest-Debug-a6c49a633e49f38a0bc0.json  directory-googletest.googlemock-Debug-ecdda4c96baf25b38ddb.json  directory-googletest.googletest-Debug-fc1ff4f0e992d0a59c83.json  index-2024-04-04T12-29-10-0055.json  index-2024-06-04T14-33-12-0062.json  target-Example-Debug-1815c56faa14d608d742.json  target-Example-Debug-6f643f9b233085ee1cc3.json  target-ExampleTests-Debug-6174af0955b0eb4201e0.json  target-ExampleTests-Debug-6eb9754a724442dff11a.json  target-gmock-Debug-54184a14d1e88e2da0a0.json  target-gmock-Debug-a926303046ea946c84f0.json  target-gmock_main-Debug-5f0dcb8865ac359f1574.json  target-gmock_main-Debug-aaf5e9d24f3c461b1597.json  target-gtest-Debug-1ab08307954d8e55152d.json  target-gtest-Debug-65f1e2db35002bfec129.json  target-gtest_main-Debug-41fd438b8f57547cf569.json  target-gtest_main-Debug-60921ebab449ff636d39.json
build-vscode/Testing/: TAG
build-vscode/Testing/20240404-1225/: Test.xml
build-vscode/Testing/20240405-1301/: Test.xml
build-vscode/Testing/20240531-1359/: Test.xml
build-vscode/Testing/20240604-1433/: Test.xml
build-vscode/Testing/Temporary/: CTestCostData.txt
build-vscode/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-vscode/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-vscode/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-vscode/test/: CTestTestfile.cmake  ExampleTests  Makefile  cmake_install.cmake
client/: Cargo.toml
client/src/: main.rs
client/src/backend/: defi_client.rs  mod.rs
client/src/ui/: mod.rs  views.rs
server/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Example.cpp  Makefile  README.md  buf.gen.yaml  buf.yaml  cmake_install.cmake  generate-proto.sh
server/proto/: CMakeLists.txt  defi.proto
server/src/: main.cpp
server/tests/: ExampleTests.cpp
test/: CMakeLists.txt  ExampleTests  ExampleTests.cpp
